--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/sitemap": "^3.2.1",
     "@astrojs/tailwind": "^5.1.0",
     "@tailwindcss/typography": "^0.5.15",
     "astro": "^4.15.3",
+    "astro-compress": "^2.3.5",
     "tailwindcss": "^3.4.1"
   }
 }
